--- a/src/main/resources/assets/build_craft_reloaded/lang/en_us.json
+++ b/src/main/resources/assets/build_craft_reloaded/lang/en_us.json
@@ -8,5 +8,6 @@
   "item.build_craft_reloaded.reinforcediron": "Reinforced Iron",
   "block.build_craft_reloaded.silverore": "Silverore",
   "block.build_craft_reloaded.tin_ore": "Tin Ore",
+  "block.build_craft_reloaded.gbnfhvfgdhb": "Gbnfhvfgdhb",
   "item_group.build_craft_reloaded.build_craft_reloaded": "Build Craft Reloaded"
 }
