--- a/src/main/resources/assets/build_craft_reloaded/lang/en_us.json
+++ b/src/main/resources/assets/build_craft_reloaded/lang/en_us.json
@@ -2,11 +2,11 @@
   "advancements.send_reinforcements.title": "Really more Smelting!?",
   "item.build_craft_reloaded.rawsilver": "Rawsilver",
   "item.build_craft_reloaded.raw_tin": "Raw Tin",
+  "block.build_craft_reloaded.tin_ore": "Tin Ore",
+  "item_group.build_craft_reloaded.build_craft_reloaded": "Build Craft Reloaded",
   "item.build_craft_reloaded.tin_ingot": "Tin Ingot",
   "advancements.send_reinforcements.descr": "Smelt Iron again",
   "item.build_craft_reloaded.copper_pickaxe": "Copper Pickaxe",
   "item.build_craft_reloaded.reinforcediron": "Reinforced Iron",
-  "block.build_craft_reloaded.silverore": "Silverore",
-  "block.build_craft_reloaded.tin_ore": "Tin Ore",
-  "item_group.build_craft_reloaded.build_craft_reloaded": "Build Craft Reloaded"
+  "block.build_craft_reloaded.silverore": "Silverore"
 }
